force-app/main/default/objects/Config__mdt/Config__mdt.object-meta.xml
<CustomObject>
    <description>Application configuration</description>
    <label>Config</label>
    <pluralLabel>Config</pluralLabel>
</CustomObject>