force-app/main/default/objects/Config__mdt/fields/DebugInfoRecipientEmails__c.field-meta.xml
<CustomField>
    <fullName>DebugInfoRecipientEmails__c</fullName>
    <description>Email(s) to Receive DebugInfo Logs</description>
    <inlineHelpText>Email(s) to Receive DebugInfo Logs</inlineHelpText>
    <label>DebugInfo Recipient Email(s)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>