force-app/main/default/objects/Config__mdt/fields/EmailDebugInfoLog__c.field-meta.xml
<CustomField>
    <fullName>EmailDebugInfoLog__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Email DebugInfo Log to DebugInfo Recipient Email(s)</description>
    <inlineHelpText>Email DebugInfo Log to DebugInfo Recipient Email(s)</inlineHelpText>
    <label>Email DebugInfo Log</label>
    <type>Checkbox</type>
</CustomField>