force-app/main/default/objects/Config__mdt/fields/KillSwitch__c.field-meta.xml
<CustomField>
    <fullName>KillSwitch__c</fullName>
    <defaultValue>false</defaultValue>
    <description>KillSwitch for Application</description>
    <inlineHelpText>Warning: All logic will be turned off if enabled!</inlineHelpText>
    <label>KillSwitch</label>
    <type>Checkbox</type>
</CustomField>